kbx/keybox-dump.c: close file handle when return
Closed, ResolvedPublic

Assigned To
Authored By
zhangguangzhi
May 18 2023, 2:54 PM
Tags

Description

Hi,I found that in function _keybox_dump_find_dups, it returns directly without closing, and there may be a handle leak. Please check whether it should close and then return.

Event Timeline

zhangguangzhi created this task.
zhangguangzhi created this object in space S1 Public.
gniibe claimed this task.
gniibe added a project: gnupg.
gniibe added a subscriber: gniibe.

Thank you.
Applied to master, 2.4 branch and 2.2 branch.

Next time, please have a look at gnupg/doc/HACKING and add an entry for the commit log.